--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     username: root
     password: 1275485428
-    url: jdbc:mysql://localhost:3307/stores?characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
+    url: jdbc:mysql://localhost:3307/stores_distribution?characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
 #    schema:
 #      - classpath:department.sql
@@ -33,19 +33,22 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
-#  redis:
-#    host: 192.168.126.130
-#    port: 6379
-#    database: 0
+  redis:
+    host: 192.168.126.130
+    port: 6379
+    database: 0
 
 mybatis:
-  config-location: classpath:mybatis/mybatis-config.xml
+#  config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/*.xml
-#  type-aliases-package: com.schooltraining.storesdistribution.entities
+  type-aliases-package: com.schooltraining.storesdistribution.entities
+  configuration:
+    map-underscore-to-camel-case: true
 logging:
   level:
-    root: info
+    root: debug
 
+#websocket 的配置信息
 netty-websocket:
   host: 0.0.0.0
   path: /myWebSocket
