--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     username: root
     password: 1275485428
-    url: jdbc:mysql://localhost:3307/stores_distribution?characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
+    url: jdbc:mysql://localhost:3307/stores_distribution?allowMultiQueries=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
 #    schema:
 #      - classpath:department.sql
@@ -34,7 +34,7 @@ spring:
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
   redis:
-    host: 192.168.126.130
+    host: 192.168.126.131
     port: 6379
     database: 0
 
@@ -44,9 +44,10 @@ mybatis:
   type-aliases-package: com.schooltraining.storesdistribution.entities
   configuration:
     map-underscore-to-camel-case: true
+  executor-type: batch # 批量处理执行器
 logging:
   level:
-    root: debug
+    root: info
 
 #websocket 的配置信息
 netty-websocket:
